--- a/src/scss/topo/_hamburguer.scss
+++ b/src/scss/topo/_hamburguer.scss
@@ -1,99 +1,176 @@
 .hamburguer {
-	position: initial;
-	text-align: left;
-	&.active {
-		> i {
-			&::before {
-				@include aws-icon("\f00d");
-			}
-		}
-		.dropdown-menu {
-			display: block;
-		}
-	}
-	> i {
-		&::before {
-			@include aws-icon("\f0c9");
-			color: $base-color;
-			font-size: 1.8em;
-		}
-	}
-	@include grid-media($grid-g){
-		display: none;
-	}
-	@include grid-media($grid-gg){
-		display: none;
-	}
-	.dropdown-menu {
-		display: none;
-		background-color: #fff;
-	    padding: 10px 15px;
-	    position: absolute;
-	    width: 100%;
-	    left: 0;
-	    top: 45px;
-	    z-index: 3;
-		.account a {
-			color: $font-dark;
-			font-weight: bold;
-			padding: 5px 1em;
-			display: block;
-			font-size: 1.1em;
-		}
-		.category-menu-small {
-			.wd-category-menu {
-				.level-1 {
-					>li {
-						margin: 0;
-						&.has-children {
-							h3 {
-								.icon {
-									float: right;
-									&::after {
-										@include aws-icon("\f0d7");
-										display: block;
-										font-size: 1.4em;									
-									}
-								}
-							}
-						}
-						h3, h4 {
-							font-size: 1em;
-							margin: 0;
-							text-transform: uppercase;
-						}
-						h3 {
-							border-bottom: 1px solid $gray-semilight;
-							padding: 1em;
-							a {
-								width: 100%;
-								display: block;
-							}
-						}
-						a {
-							color: $font-dark;
-						}
-						&.active {
-							h3 {
-								.icon::after {
-									@include aws-icon("\f0d8");
-								}
-							}
-							.level-2 {
-								display: block;
-							}
-						}
-						.level-2 {
-							display: none;
-							padding-left: 20px;
-							h4 {
-								font-weight: normal;
-								padding: 5px;
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+    position: initial;
+    text-align: left;
+
+    @keyframes x {
+        0% {
+            width: 0%
+        }
+
+        100% {
+            width: 80%
+        }
+    }
+
+    @keyframes y {
+        0% {
+            width: 100%
+        }
+
+        100% {
+            width: 0%
+        }
+    }
+
+    &.fechado {
+        .dropdown-menu {
+            position: fixed;
+            top: 0;
+            height: 100%;
+            overflow: auto;
+            display: block;
+            width: 0%;
+            animation: y linear 0.6s;
+            padding: 0;
+        }
+
+
+    }
+
+    &.active {
+        >i {
+            &::before {
+                @include aws-icon("\f00d");
+            }
+        }
+
+        .dropdown-menu {
+            position: fixed;
+            top: 0;
+            height: 100%;
+            overflow: auto;
+            display: block;
+            width: 80%;
+            animation: x linear 0.6s;
+        }
+    }
+
+    >i {
+        &::before {
+            @include aws-icon("\f0c9");
+            color: $base-color;
+            font-size: 1.8em;
+        }
+    }
+
+    @include grid-media($grid-g) {
+        display: none;
+    }
+
+    @include grid-media($grid-gg) {
+        display: none;
+    }
+
+    .dropdown-menu {
+        display: none;
+        background-color: #fff;
+        padding: 10px 15px;
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 45px;
+        z-index: 3;
+        width: 0;
+        animation: y linear 0.6s;
+
+        .close-icon {
+            text-align: right;
+
+            .close-hamburguer {
+                background-color: transparent;
+                padding: 0;
+                font-weight: bold;
+                color: $gray-medium;
+
+                i {
+                    font-size: 26px;
+                }
+            }
+        }
+
+        .account a {
+            color: $font-dark;
+            font-weight: bold;
+            padding: 5px 1em;
+            display: block;
+            font-size: 1.1em;
+        }
+
+        .category-menu-small {
+            .wd-category-menu {
+                .level-1 {
+                    >li {
+                        margin: 0;
+
+                        &.has-children {
+                            h3 {
+                                .icon {
+                                    float: right;
+
+                                    &::after {
+                                        @include aws-icon("\f0d7");
+                                        display: block;
+                                        font-size: 1.4em;
+                                    }
+                                }
+                            }
+                        }
+
+                        h3,
+                        h4 {
+                            font-size: 1em;
+                            margin: 0;
+                            text-transform: uppercase;
+                        }
+
+                        h3 {
+                            border-bottom: 1px solid $gray-semilight;
+                            padding: 1em;
+
+                            a {
+                                width: 100%;
+                                display: block;
+                            }
+                        }
+
+                        a {
+                            color: $font-dark;
+                        }
+
+                        &.active {
+                            h3 {
+                                .icon::after {
+                                    @include aws-icon("\f0d8");
+                                }
+                            }
+
+                            .level-2 {
+                                display: block;
+                            }
+                        }
+
+                        .level-2 {
+                            display: none;
+                            padding-left: 20px;
+
+                            h4 {
+                                font-weight: normal;
+                                padding: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
