--- a/src/scss/topo/_hamburguer.scss
+++ b/src/scss/topo/_hamburguer.scss
@@ -4,21 +4,21 @@
 
     @keyframes x {
         0% {
-            width: 0%
+            left: -100%;
         }
 
         100% {
-            width: 80%
+            left: 0;
         }
     }
 
     @keyframes y {
         0% {
-            width: 100%
+            left: 0;
         }
 
         100% {
-            width: 0%
+            left: -100%
         }
     }
 
@@ -29,9 +29,10 @@
             height: 100%;
             overflow: auto;
             display: block;
-            width: 0%;
-            animation: y linear 0.6s;
-            padding: 0;
+            width: 80%;
+            animation: y linear 0.2s;
+            padding: 10px;
+            left: -100%;
         }
 
 
@@ -51,7 +52,9 @@
             overflow: auto;
             display: block;
             width: 80%;
-            animation: x linear 0.6s;
+            animation: x linear 0.2s;
+            left: 0;
+            padding: 10px;
         }
     }
 
